--- a/lab-3/ll-3-case-study.Rmd
+++ b/lab-3/ll-3-case-study.Rmd
@@ -21,30 +21,20 @@ knitr::opts_chunk$set(echo = TRUE, eval = TRUE)
 
 ## Background
 
-After interpreting our last model, it is easy to think we can do better.
-How? In this learning lab, we will answer this question will building a
-better model.
+After interpreting our last model, it is easy to think we can do a
+little better. But, how? In this learning lab, we will answer this
+question will building a better model.
 
 Feature engineering is a rich topic in machine learning research,
 including in the learning analytics and educational data mining
 communities.
 
-Consider research on online learning and the work of Li et al. (2020)
-and Rodriguez et al. (2021). In these two studies, digital *log-trace
-data*, data generated through users' interactions with digital
-technologies, was used to study elements of the theoretical frame of
-*self-regulated learning* and how it related to students' achievement.
-Notably, the authors took several steps to prepare the data so that it
-could be validly interpreted as measures of students' self-regulated
-learning. In short, we need to process the data from contexts such as
-online classes to use them in analyses. Citations and links to these
-papers follow.
+Consider research on online learning and the work of Rodriguez et al.
+(2021). In these two studies, digital *log-trace data*, data generated
+through users' interactions with digital technologies. Review this paper
+-- specifically how they processed the "clickstream" data. As this paper
+illustrates, there is not one way to use such data.
 
-> Li, Q., Baker, R., & Warschauer, M. (2020). Using clickstream data to
-> measure, understand, and support self-regulated learning in online
-> courses. The Internet and Higher Education, 45, 100727.
-> <https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-2/li-et-al-2020-ihe.pdf>
->
 > Rodriguez, F., Lee, H. R., Rutherford, T., Fischer, C., Potma, E., &
 > Warschauer, M. (2021, April). Using clickstream data mining techniques
 > to understand and support first-generation college students in an
@@ -52,21 +42,25 @@ papers follow.
 > Analytics and Knowledge Conference (pp. 313-322).
 > <https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-2/rodriguez-et-al-2021-lak.pdf>
 
-The same is true here in the context of machine learning. In a different
-context, the work of Gobert et al. (2013) is a great example of using
-data from educational simulations. Salmeron-Majadas provides an example
-of feature engineering using mouse-click data. Last, we note that there
-are methods that intended to automated the process of feature
-engineering (Bosch et al., 2021), though such processes are not
-necessarily interpretable and they usually require some degree of
-tailoring to your particular context.
+Notably, the authors took several steps to prepare the data so that it
+could be validly interpreted. The same is true here in the context of
+machine learning. In a different context, the work of Gobert et al.
+(2013) is a great example of using data from educational simulations.
+Please review this paper, too, focused on their use of a technique they
+called *replay tagging* to conduct feature engineering.
 
 > Gobert, J. D., Sao Pedro, M., Raziuddin, J., & Baker, R. S. (2013).
 > From log files to assessment metrics: Measuring students' science
 > inquiry skills using educational data mining. Journal of the Learning
 > Sciences, 22(4), 521-563.
 > <https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-3/gobert-et-al-2013-jls.pdf>
->
+
+Last, we note that there are methods that intended to automated the
+process of feature engineering (Bosch et al., 2021), though such
+processes are not necessarily interpretable and they usually require
+some degree of tailoring to your particular context. Review this paper
+on this topic
+
 > Bosch, N. (2021). AutoML Feature Engineering for Student Modeling
 > Yields High Accuracy, but Limited Interpretability. Journal of
 > Educational Data Mining, 13(2), 55-79.
@@ -76,43 +70,29 @@ Even after feature engineering, machine learning approaches can often
 (but not always) be improved by choosing a more sophisticated model
 type. Note how we used a regression model in the first two case studies;
 here, we explore a considerably more sophisticated model, a random
-forest.
+forest. Feature engineering and choosing a more sophisticated model adds
+some complexity to the modeling. As we have discussed, it is easy to
+bias our results if we repeatedly check the performance of *different
+model fits* with the same test data. Cross-validation is one commonly
+used solution for this problem.
 
-Choosing a more sophisticated model adds some complexity to the
-modeling. In addition to using feature engineering in a way akin to how
-we did in the last case study, Bertolini et al. (2021) use tuning
-parameters to improve the performance of their predictive model.
-
-> Bertolini, R., Finch, S. J., & Nehm, R. H. (2021). Enhancing data
-> pipelines for forecasting student performance: integrating feature
-> selection with cross-validation. *International Journal of Educational
-> Technology in Higher Education, 18*(1), 1-23.
-> <https://github.com/laser-institute/essential-readings/blob/main/machine-learning/ml-lab-3/bertolini-et-al-2021-ijethe.pdf>
-
-Our driving question is: **How much of a difference does a more complex
-model make?** Looking back to our predictive model from LL1, we can see
-that our accuracy was around xx. Can we improve on that?
-
-While answering this question, we focus not only on estimating, but also
-on tuning a complex model. The data we use is, again, from the #NGSSchat
-community on Twitter, as in doing so we can compare the performance of
-this tuned, complex model to the initial model we used in the first case
-study.
-
-> Baker, R. S., Esbenshade, L., Vitale, J., & Karumbaiah, S. (2023).
-> Using Demographic Data as Predictor Variables: a Questionable Choice.
-> *Journal of Educational Data Mining*, *15*(2), 22-52.
+Our driving question is: **How much can we improve our model?** Looking
+back to our predictive model from LL 2, we can see that our accuracy was
+okay. Can we improve on that? Let's dive in!
 
 ## Step 0: Loading and setting up
 
 First, let's load the packages we'll use---the familiar {tidyverse} and
-several others focused on modeling. Like in earlier learning labs, click
-the green arrow to run the code chunk.
+several others focused on modeling.
 
 #### [Your Turn]{style="color: green;"} ⤵
 
-Please add to the chunk below code to load three packages we've used in
-both LL1 and LL2 - tidyverse, tidymodels, and here.
+Please add to the chunk below code to load three packages we've used
+before -- tidyverse, janitor, and tidymodels.
+
+Please install and add two additional packages: {ranger}, for one
+implementation of random forest modeling, and {vip}, for variable
+importance metrics.
 
 ```{r}
 library(janitor)
@@ -122,145 +102,272 @@ library(vip) # a new package we're adding for variable importance measures
 library(ranger) # this is needed for the random forest algorithm
 ```
 
-Next, we'll load the processed data.
+Next, we'll load a few different files. First, please load the
+assessments data we used in the first two learning labs; look back at
+your code therein for a pointer, if needed. Save it the name
+`assessments`.
+
+#### [Your Turn]{style="color: green;"} ⤵
 
 ```{r}
-assessments <- read_csv("lab-3/data/oulad-assessments.csv")
-
-code_module_dates <- assessments %>% 
-    group_by(code_module, code_presentation) %>% 
-    summarize(quantile_cutoff_date = quantile(date, probs = .25, na.rm = TRUE))
-
-# students and assessments 
-students_and_assessments <- read_csv("lab-3/data/oulad-students-and-assessments.csv")
-
+assessments <- read_csv("data/oulad-assessments.csv")
 ```
+
+Next, we'll do the same processing we did in the second learning lab, to
+obtain cut-off dates. As a reminder, the purpose of this is to train the
+model on data from the first one-third of the class, with the reasoning
+being this is a good time to intervene--far enough into the class to
+make an appreciable impact, but not too late to have a limited chance of
+being able to change students' trajectory in the class.
+
+```{r}
+code_module_dates <- assessments %>% 
+  group_by(code_module, code_presentation) %>% 
+  summarize(quantile_cutoff_date = quantile(date, probs = .33, na.rm = TRUE)) # change this throughout
+```
+
+Next, we'll load the data - already processed in learning lab #2, so we
+can focus on additional data processing steps here. You can run the next
+code chunk to load this data.
+
+```{r}
+# students and assessments 
+students_and_assessments <- read_csv("data/oulad-students-and-assessments.csv")
+```
+
+Now, we will load a new file -- `interactions.csv` , with clickstream
+data from students. In the OULAD documentation, this is called the VLE
+(virtual learning environment) data source. Please review the
+description of the variables in the *studentVLE* and *VLE* sources
+(which are joined together for this learning lab)
+[here](https://analyse.kmi.open.ac.uk/open_dataset#description). Then,
+read in the `oulad-interactions.csv` file.
+
+#### [Your Turn]{style="color: green;"} ⤵
 
 ```{r}
 # log-data
-interactions <- read_csv("lab-3/data/oulad-interactions.csv")
+interactions <- read_csv("data/oulad-interactions.csv")
+```
 
+Woah, this is a large file! Let's start to explore it a bit. Please take
+three steps to explore the data, as follows.
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+*First*, `count()` the `activity_type` variable and *sort* the resulting
+output by frequency.
+
+```{r}
 interactions %>% 
-    count(activity_type)
+  count(activity_type)
+```
 
+What does this tell you? Consulting the codebook and your output, please
+add at least two notes on what you are noticing:
+
+-   
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+*Second*, please create a histogram of the `date` variable.
+
+```{r}
 interactions %>% 
-    ggplot(aes(x = log(sum_click))) +
-    geom_histogram()
+  ggplot(aes(x = date)) +
+  geom_histogram()
+```
 
-interactions %>% 
-    ggplot(aes(x = date)) +
-    geom_histogram()
+What does this tell you? Add one or more notes:
 
-interactions %>% 
-    count(id_site, code_module, code_presentation)
+-   
 
-## ---
+*Third*, please conduct one other data exploration step of your
+choosing. Options include creating simple graphgs or calculating
+descriptive, summary statistics.
 
-code_module_dates <- assessments %>% 
-    group_by(code_module, code_presentation) %>% 
-    summarize(quantile_cutoff_date = quantile(date, probs = .25, na.rm = TRUE))
+```{r}
 
+```
+
+We're ready to proceed to engineering some features with the
+interactions data.
+
+First, let's join together the `interactions` and the
+`code_module_dates` data frames. This is so we have the cut-offs
+(one-third through the semester), which will help us to only use data
+from that period in our model when we filter the data based upon those
+dates.
+
+```{r}
 interactions_joined <- interactions %>% 
-    left_join(code_module_dates) # join the data based on course_module and course_presentation
+  left_join(code_module_dates) # join the data based on course_module and course_presentation
 
 interactions_filtered <- interactions_joined %>% 
-    filter(date < quantile_cutoff_date) # filter the data so only assignments before the cutoff date are included
+  filter(date < quantile_cutoff_date) # filter the data so only assignments before the cutoff date are included
+```
 
-## ---------------------------------------------------------------------------------------------------
+Then, let's engineer several features. For the present time, we'll focus
+on the `sum_click` variable, which tells us how many times students
+clicked on a resource for a given date. We'll use the
+`interactions_filtered` data set we just created. Let's start simple:
+please type the name of that data set (`interactions_filtered`) in the
+code chunk below.
 
+#### [Your Turn]{style="color: green;"} ⤵
+
+```{r}
+interactions_filtered
+```
+
+How can we create a feature with `sum_click`? Think back to our
+discussion in the presentation; we have *many* options for working with
+such time series data. Perhaps the most simple is to count the clicks.
+Please summarize the number of clicks for each student (specific to a
+single course). This means you will need to group your data by
+`id_student`, `code_module`, and `code_presentation`, and then create a
+summary variable. Assign the resulting output the name
+`interactions_summarized`. You may find the documentation for
+`summarize()` to be helpful. That is available
+[here](https://dplyr.tidyverse.org/reference/summarise.html). [This
+chapter](https://r4ds.had.co.nz/transform.html) is also likely helpful
+(note that `summarise()` and `summarize()` are different spellings for
+the same function).
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+```{r}
 interactions_summarized <- interactions_filtered %>% 
-    group_by(id_student, code_module, code_presentation) %>% 
-    summarize(sum_clicks = sum(sum_click),
-              sd_clicks = sd(sum_click), 
-              max_clicks = max(sum_click))
+  group_by(id_student, code_module, code_presentation) %>% 
+  summarize(sum_clicks = sum(sum_click))
+```
 
-interactions_summarized %>% 
-    ggplot(aes(x = sum_clicks)) +
-    geom_histogram()
+This is a good start - we've created our first feature based upon the
+clickstream data! What are some other features we can add? An affordance
+of using the `summarize()` function in R is we can create multiple
+summary statistics at once. Let's also calculate the standard deviation
+of the number of clicks as well as the mean. Please copy the code you
+wrote above into the code chunk below and then add these two additional
+summary statistics.
 
-interactions_summarized_activity <- interactions_filtered %>% 
-    group_by(id_student, code_module, code_presentation, activity_type) %>% 
-    summarize(sum_clicks = sum(sum_click))
+#### [Your Turn]{style="color: green;"} ⤵
 
-interactions_summarized_activity %>% 
-    ggplot(aes(x = sum_clicks)) +
-    geom_histogram() +
-    facet_wrap(~activity_type)
+```{r}
+interactions_summarized <- interactions_filtered %>% 
+  group_by(id_student, code_module, code_presentation) %>% 
+  summarize(sum_clicks = sum(sum_click),
+            sd_clicks = sd(sum_click), 
+            mean_clicks = mean(sum_click))
+```
 
-interactions_slopes <- interactions_filtered %>% 
-    group_by(id_student, code_module, code_presentation) %>% 
-    nest() %>% 
-    mutate(model = map(data, ~lm(sum_click ~ 1 + date, data = .x) %>% 
-                           tidy)) %>% 
-    unnest(model)
+We'll take one last step here -- creating individual *slopes* of
+students' clicks over time. This code is a bit more involved, and so is
+annotated for you below; feel free to modify and re-use this.
 
-interactions_slopes %>% 
-    filter(term == "date")
+```{r}
+interactions_slopes <- interactions_filtered %>% # start with our interactions data
+  group_by(id_student, code_module, code_presentation) %>% # group by student and course so a slope is calculated for each student by course combination 
+  nest() %>% # this tells R that we want to create a smaller data frame, wherein each students' data is assigned its own cell; it makes the next step possible
+  mutate(model = map(data, ~lm(sum_click ~ 1 + date + I(date^2), data = .x) %>% 
+                       tidy)) %>% # now, given that we have a smaller data frame with each student by course combination in its own cell, we can use mutate to fit a linear model for each students by course data set; the linear model fits a linear and a quadratic term
+  unnest(model) # this returns the data to its original (non-nested structure), retaining the mutated model output
+```
 
+Please mutate the resulting intercept, date, and data squared variables
+to be renamed: `intercept`, `date`, and `date_2`, respectively.
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+```{r}
+
+```
+
+After running this code, we will have intercepts, linear slopes, and
+quadratic terms for each students' clickstream pattern over the
+semester.
+
+Let's join together several files. First, let's join all our features
+into a single file. Please use `left_join()` to join
+`interactions_filtered` and `interactions_slopes`, assigning the
+resulting output the name `all_features`.
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+```{r}
+all_features <- left_join(interactions_filtered, interactions_slopes)
+```
+
+Just one last step! Let's join together *all* of the data we'll use for
+our modeling: `students_and_assessments` and `all_features`. Use
+`left_join()` once more, assigning the resulting output the name
+`students_assessments_and_interactions`.
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+```{r}
 students_assessments_and_interactions <- left_join(students_and_assessments, 
                                                    interactions_summarized)
 ```
 
+One more small step. Let's ensure that our outcome variable -- `pass` --
+is a factor. It was, but when saving to and reading from a CSV, it lots
+its factor characteristics, becoming instead a character string. It is
+necessary for the outcome of a classification model (like the one we are
+using) to be a factor. Please use `mutate()` to do just that.
+
+#### [Your Turn]{style="color: green;"} ⤵
+
 ```{r}
 students_assessments_and_interactions <- students_assessments_and_interactions %>% 
-    mutate(pass = as.factor(pass))
+  mutate(pass = as.factor(pass))
 ```
+
+We're now ready to model!
 
 ## Step 1. Split data
 
+We'll follow the same steps we followed in learning labs #1 and #2,
+here. One difference - we'll use `students_assessments_and_interactions`
+instead of the data frame we used in those learning labs. Please port
+over the code you used in those learning labs here, changing the name of
+the data frame to the one we are now using.
 
-
-We treat this step relatively minimally as we have now carried out a
-step very similar to this in LL1 and LL2; return to the case study for
-those (especially LL1) for more on data splitting. Note that we carry
-out the *k*-folds cross-validation process introduced in LL2. Consider -
-like there - setting a different value for *v* (*k*) as you think is
-appropriate.
-
-Here's a key difference! Pay careful attention to this next line of
-code, which sets the groundwork for *k*-folds cross-validation. Note
-that in the function below (run `?vfold_cv` to see more), the letter *v*
-is used instead of *k*, though they share a meaning, as the
-documentation notes).
-
-```{r}
-kfcv <- vfold_cv(data_train) # this differentiates this from what we did before
-# before, we simple used data_train to fit our model
-kfcv
-```
+We discuss this first step minimally as we have now carried out a step
+very similar to this in LL1 and LL2; return to the case study for those
+(especially LL1) for more on data splitting.
 
 #### [Your Turn]{style="color: green;"} ⤵
-
-Above, we split the data into 10 different folds. Change the number of
-folds from 10 to 20 by changing the value of v; 10 is simply the
-default. For help, run `?vfold_cv` to get a hint.
-
-```{r}
-kfcv <- vfold_cv(data_train) # this differentiates this from what we did before
-# before, we simple used data_train to fit our model
-kfcv
-```
-
-#### [Your Turn]{style="color: green;"} ⤵
-
-You do have one step that is your turn! Please add the code for setting
-up the k-folds cross-validation.
 
 ```{r}
 set.seed(20230712)
 
-train_test_split <- initial_split(students_assessments_and_interactions , prop = .50, strata = "pass")
+train_test_split <- initial_split(students_assessments_and_interactions , prop = .33, strata = "pass")
 data_train <- training(train_test_split)
-kfcv <- vfold_cv(data_train) # this differentiates this from what we did before
-# before, we simple used data_train to fit our model
-data_test <- testing(train_test_split)
 ```
 
-Here's a key difference! Pay careful attention to this next line of
-code, which sets the groundwork for *k*-folds cross-validation. Note
-that in the function below (run `?vfold_cv` to see more), the letter *v*
-is used instead of *k*, though they share a meaning, as the
-documentation notes).
+There is a key difference that is next. In this step. we'll further
+process `data_train`, creating different subsets of the data, or folds
+of the data, that we can use to fit our model multiple times.
+
+```{r}
+vfcv <- vfold_cv(data_train) # this differentiates this from what we did before
+# before, we simple used data_train to fit our model
+vfcv
+```
+
+How does this work? `data_train` is sampled as many time as we se \####
+[Your Turn]{style="color: green;"} ⤵
+
+Above, we split the data into 10 different folds. Change the number of
+folds from 10 to 20 by changing the value of v; 10 is simply the
+default---not always the best one! For help, run `?vfold_cv` to get a
+hint.
+
+```{r}
+kfcv <- vfold_cv(data_train, v = 20) # this differentiates this from what we did before
+# before, we simple used data_train to fit our model
+kfcv
+```
 
 ## Step 2: Engineer features and write down the recipe
 
@@ -273,57 +380,84 @@ more about how the following five feature engineering steps below work.
 Like in the first learning lab, this is the step in which we set the
 recipe.
 
--   `step_normalize(all_numeric_predictors())`
--   `step_nzv(all_predictors())`
--   `step_novel(all_nominal_predictors())`
--   `step_dummy(all_nominal_predictors())`
--   `step_impute_knn(all_predictors(), all_outcomes())`
+-   [`step_normalize()`](https://recipes.tidymodels.org/reference/step_normalize.html):
+    normalizes numeric data to have a standard deviation of one and a
+    mean of zero
+-   [\`step_dummy()](https://recipes.tidymodels.org/reference/step_dummy.html):
+    convert nominal data (e.g. character or factors) into one or more
+    numeric binary model terms for the levels of the original data.
+-   [`step_impute_knn()](https://recipes.tidymodels.org/reference/step_impute_knn.html)`
+    impute missing alues using the nearest neighbors method
 
-In Step 0, we noted how we added three variables as potential features.
-Here, we carry out two feature engineering steps we have carried out
-before - standardizing the numeric variables (to have a mean equal to 0
-and a standard deviation equal to 1) and dropping any features with
-near-zero variance. Consider adding other feature engineering steps -
-perhaps the step you carried out complete the badge requirements for
-LL2.
+We will use all three of these. Please note that there are two ways to
+use each of these. One of them is by *specifying the specific variable*
+you want to use for the feature engineering step. For example, below, we
+would normalize a hypothetical variable, one called
+`minutes_of_videos_watched`:
 
-```{r,}
+```{r, eval = FALSE}
+step_normalize(minutes_of_videos_watched)
+```
+
+Another way is to specify *for which types of variables* the feature
+engineering step applies. You can see all of the available types
+[here](<https://recipes.tidymodels.org/reference/has_role.html>. For
+example, the code below would normalize all numeric variables:
+
+```{r}
+step_normalize(all_numeric_predictors())
+```
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+Let's turn to our recipe. Please *add to* the code below to add the new
+variables---features---we created.
+
+```{r}
 my_rec <- recipe(pass ~ disability +
-                     date_registration + 
-                     gender +
-                     code_module +
-                     mean_weighted_score +
-                     sum_clicks, 
-                 data = data_train) %>% 
-    step_dummy(disability) %>% 
-    step_dummy(gender) %>%  
-    step_dummy(code_module) %>% 
-    step_impute_knn(sum_clicks) %>% 
-    step_impute_knn(date_registration)
+                   date_registration + 
+                   gender +
+                   code_module +
+                   mean_weighted_score +
+                   sum_clicks + sd_clicks + mean_clicks +
+                   intercept + date + date_2, 
+                 data = data_train)
+```
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+Then, please *add to* the following code by completing three steps,
+building on the code that is started below:
+
+1.  Please normalize all numeric predictors.\
+2.  Please dummy code the following three variables: `disability`,
+    `gender`, and `code_module`.\
+3.  Please impute missing values using the nearest neighbors method for
+    the `sum_clicks` and `date_registration` variables.
+
+```{r}
+my_rec <- my_rec %>% 
+  step_dummy(disability) %>% 
+  step_dummy(gender) %>%  
+  step_dummy(code_module) %>% 
+  step_impute_knn(sum_clicks) %>% 
+  step_impute_knn(date_registration) %>% 
+  step_normalize(all_numeric_predictors())
 ```
 
 ## Step 3: Specify the model and workflow
 
 Next, we specify the model and workflow, using the same engine *but a
 different engine and mode*, here, regression for a *continuous outcome*.
-Specifically, we use:
-
--   using the `linear_reg()` function to set the *model*
--   using `set_engine("glm")` to set the *engine*
--   finally, using `set_mode("regression"))`
-
-## Step 3: Specify recipe, model, and workflow
-
-There are several steps that are different from the past learning labs
-here.
+Specifically, we are:
 
 -   using the `random_forest()` function to set the *model* as a random
     forest
 -   using `set_engine("ranger", importance = "impurity")` to set the
     *engine* as that provided for random forests through the {ranger}
     package; we also add the `importance = "impurity"` line to be able
-    to interpret a particular variable importance metric (impurity)
-    specific to random forest models
+    to interpret a particular variable importance metric specific to
+    random forest models
 -   finally, using `set_mode("classification"))` as we are again
     predicting categories (transactional and substantive conversations
     taking place through #NGSSchat)
@@ -331,39 +465,70 @@ here.
 ```{r panel-chunk-3, echo = TRUE, eval = TRUE}
 # specify model
 my_mod <-
-    rand_forest() %>% 
-    set_engine("ranger", importance = "impurity") %>% # random
-    set_mode("classification") # since we are predicting a dichotomous outcome, specify classification; for a number, specify regression
+  rand_forest() %>% # specify the type of model we are fitting, a random forest
+  set_engine("ranger", importance = "impurity") %>% # using a variable importance metric specific to this random forest engine
+  set_mode("classification") # same as before
 
 # specify workflow
 my_wf <-
-    workflow() %>% # create a workflow
-    add_model(my_mod) %>% # add the model we wrote above
-    add_recipe(my_rec) # add our recipe we wrote above
+  workflow() %>% # create a workflow
+  add_model(my_mod) %>% # add the model we wrote above
+  add_recipe(my_rec) # add our recipe we wrote above
 ```
 
 ## Step 4: Fit model
 
-Note that here we use the `kfcv` data. We'll run that in the next chunk.
-
-We can ignore the warnings and messages we see.
+Note that here we use the `kfcv` data and a different function -
+`fit_resamples()`, instead of `fit()`. This function is required when we
+have multiple folds of our sample, as we created using the vfcv function
+above. See more about this function
+[here](https://tune.tidymodels.org/reference/fit_resamples.html).
 
 ```{r}
-fitted_model_resamples <- fit_resamples(my_wf, resamples = kfcv,
-                              control = control_grid(save_pred = TRUE)) # this allows us to inspect the predictions
-
-fitted_model_resamples %>%
-    collect_metrics()
+class_metrics <- metric_set(accuracy, sensitivity, specificity, ppv, npv, kap) # specify the same metrics as earlier
+fitted_model_resamples <- fit_resamples(my_wf, resamples = vfcv, metrics = class_metrics) # specify the workflow, resampled data, and our metrics
 ```
 
-```{r, warning = FALSE}
-class_metrics <- metric_set(accuracy, sensitivity, specificity, ppv, npv, kap) # add probs?
+Note that you have fit as many models as the value for `v` that you
+specified earlier. So, this may take some time. Take a walk, grab a
+snack, or make a cup of tea!
 
+Then, we can use the same `collect_metrics()` function we have used to
+inspect the predictive strength of the model. Please do that for
+`fitted_model_resamples`.
+
+#### [Your Turn]{style="color: green;"} ⤵
+
+```{r}
+
+```
+
+We noted earlier that we may introduce bias when we evaluate different
+models against the same training data. The benefit of using the multiple
+folds - and fitting multiple models - is we can make changes to our
+features or model. Thus, if we decide to add a new feature, we can run
+the above steps, without concern about biasing our interpretation of how
+accurate our model is.
+
+That is, we can be unconcerned about inadvertently introducing bias
+until we reach the last step - fitting our last model. We can do that
+using the familiar `fit()` function, followed by `last_fit`. It is
+important to not make further changes after this point/
+
+```{r}
 fitted_model <- fit(my_wf, data_train)
 final_fit <- last_fit(fitted_model, train_test_split, metrics = class_metrics)
+```
 
+## Step 5: Interpret accuracy
+
+fa Finally, collect the metrics for our final fit. *These* are the
+values that you should report as final. \#### [Your
+Turn]{style="color: green;"} ⤵
+
+```{r}
 final_fit %>% 
-    collect_metrics()
+  collect_metrics()
 ```
 
 We can see that `final_fit` is for a single fit: a random forest with
@@ -371,51 +536,30 @@ the best performing tuning parameters trained with the *entire* training
 set of data to predict the values in our (otherwise not used/"spent")
 testing set of data.
 
-## Step 5: Interpret accuracy
+#### [Your Turn]{style="color: green;"} ⤵
 
-Last, we can interpret the accuracy of our tuned model.
-
-```{r fit-stats}
-collect_predictions(final_fit)
-
+```{r}
 collect_predictions(final_fit) %>% 
-    conf_mat(.pred_class, pass)
+  conf_mat(.pred_class, pass)
 
-collect_metrics(final_fit
 ```
 
-Interpreting these - apart from `accuracy` - may present some
-challenges. First, we can focus on the accuracy - around 89% (0.886).
-Accuracy and the others are defined below.
-
--   *Accuracy*: For the known codes, what percentage of the predictions
-    are correct
-
--   *Cohen's K*: Same as accuracy, while account for the base rate of
-    (chance) agreement
-
--   *Sensitivity (AKA recall)*: Among the true "positives", what
-    percentage are classified as "positive"?
-
--   *Specificity*: Among the true "negatives", what percentage are
-    classified as "negative"?
-
--   *ROC AUC*: For different levels of the threshold (for making a
-    predicting), what is the sensitivity (predicted true, true positive)
-    and specificity (predicted negative, true negative) rate?
-
-You'll have the chance to interpret these further in the badge for this
-learning lab.
-
-One last note - we may be interested to see which variables were most
-importance. We can do this with the following.
+Another benefit of a random forest is we can interpret variable
+importance metrics. Do that here with the following code.
 
 ```{r}
 final_fit %>% 
-    pluck(".workflow", 1) %>%   
-    extract_fit_parsnip() %>% 
-    vip(num_features = 10)
+  pluck(".workflow", 1) %>%   
+  extract_fit_parsnip() %>% 
+  vip(num_features = 10)
 ```
+
+Please add two or more notes on what you notice about which variables
+(features) are important:
+
+-   
+
+-   
 
 ### 🧶 Knit & Check ✅
 
